# STAIRDigital-assessment

./: .dockerignore  .env.example  .gitattributes  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.streamlit/: config.toml
data/pdfs/: 55d80d424ded18a2.json
eval/: queries.yaml  report.json  report.md  run_eval.py
examples/: quick_test.py
pdfagent/: __init__.py  config.py  llm.py  orchestrator.py  registry.py  service.py  types.py
pdfagent/agent/: __init__.py  grounded_answer.py  prompts.py  verify.py
pdfagent/api/: app.py  routes.py  schemas.py
pdfagent/index/: __init__.py  embeddings.py  store.py
pdfagent/ingest/: __init__.py  chunk.py  extract.py  ocr.py  pipeline.py  tables.py
pdfagent/retrieve/: __init__.py  hybrid.py  rewrite.py
pdfagent/trace/: __init__.py  cost.py  logger.py
pdfagent/ui/: eval_page.py  pdf_viewer.py  streamlit_app.py  theme.py
scripts/: preflight.py
tests/: conftest.py  test_chunk.py  test_eval_live.py  test_llm_json.py  test_verify.py
